Added new unctionality

--- a/cause.html
+++ b/cause.html
@@ -61,6 +61,7 @@
 <div class="causecontainer">
     <div class="q1">
         <form>
+            Question 1 of 24
             <span class="question">
                 Do you feel increased thirst or urination very often?
             </span>
@@ -72,6 +73,7 @@
     </div>
     <div class="q2">
         <form>
+            Question 2 of 24
             <span class="question">
                 Did you experience increased hunger naturally, from the past 6 months or beyond?
             </span>
@@ -83,6 +85,7 @@
     </div>
     <div class="q3">
         <form>
+            Question 3 of 24
             <span class="question">
                 How often do you experience fatigue considering that the ammount of physical exercise and current meal size largely remained constant?
             </span>
@@ -94,6 +97,7 @@
     </div>
     <div class="q4">
         <form>
+            Question 4 of 24
             <span class="question">
                 Are you able to see objects almost clearly or is your vision fairly blurred, considering that your power of eyes sparsely changed?
             </span>
@@ -105,6 +109,7 @@
     </div>
     <div class="q5">
         <form>
+            Question 5 of 24
             <span class="question">
                 Do you feel numbness or tingling in the feet or hands?
             </span>
@@ -116,6 +121,7 @@
     </div>
     <div class="q6">
         <form>
+            Question 6 of 24
             <span class="question">
                 Do you have sores in your skin anywhere that do not heal or do so but very slowly?
             </span>
@@ -127,6 +133,7 @@
     </div>
     <div class="q7">
         <form>
+            Question 7 of 24
             <span class="question">
                 Do you know what trigerred your recent weight loss even though you kept your diet almost unchanged?
             </span>
@@ -138,6 +145,7 @@
     </div>
     <div class="q8">
         <form>
+            Question 8 of 24
             <span class="question">
                 You have a blood relative who is or was diagnosed with Diabetes (Type I or Type II), right?
             </span>
@@ -149,6 +157,7 @@
     </div>
     <div class="q9">
         <form>
+            Question 9 of 24
             <span class="question">
                 Are you ever diagnosed with insulin resistance?
             </span>
@@ -160,6 +169,7 @@
     </div>
     <div class="q10">
         <form>
+            Question 10 of 24
             <span class="question">
                 Do you see horizontal lines on the nails or your nails get broken vertically often?
             </span>
@@ -171,6 +181,7 @@
     </div>
     <div class="q11">
         <form>
+            Question 11 of 24
             <span class="question">
                 Did you experience blood in your urine within an year or so?
             </span>
@@ -182,6 +193,7 @@
     </div>
     <div class="q12">
         <form>
+            Question 12 of 24
             <span class="question">
                 Do you experience pounding in your chest, neck, or ears very often, cosidering didn't have a Heart Attack even once in your life?
             </span>
@@ -193,6 +205,7 @@
     </div>
     <div class="q13">
         <form>
+            Question 13 of 24
             <span class="question">
                 Could you find a reason for your severe headache that occurs almost regularly?
             </span>
@@ -204,6 +217,7 @@
     </div>
     <div class="q14">
         <form>
+            Question 14 of 24
             <span class="question">
                 How often do you experience a chest pain, which is clearly not a cardiac arrest?
             </span>
@@ -215,6 +229,7 @@
     </div>
     <div class="q15">
         <form>
+            Question 15 of 24
             <span class="question">
                 Do you experience difficulty in breathing considering that its reason wasn't air pollution or a lung disease?
             </span>
@@ -226,6 +241,7 @@
     </div>
     <div class="q16">
         <form>
+            Question 16 of 24
             <span class="question">
                 Do you have a blood relative who has or had kidney failure (and the cause of the kidney failure, if you know it).
             </span>
@@ -237,6 +253,7 @@
     </div>
     <div class="q17">
         <form>
+            Question 17 of 24
             <span class="question">
                 Do you work in a factory that uses heavy metals? (Heavy metals are Lead, Zinc, Arsenic, etc)
             </span>
@@ -248,6 +265,7 @@
     </div>
     <div class="q18">
         <form>
+            Question 18 of 24
             <span class="question">
                 How often do you use herbal medecines that have heavy metals in them?
             </span>
@@ -259,6 +277,7 @@
     </div>
     <div class="q19">
         <form>
+            Question 19 of 24
             <span class="question">
                 How often do you feel confused or experience Brain dysfunction such as memory loss considering that you are not suffering from neuro disease?
             </span>
@@ -270,6 +289,7 @@
     </div>
     <div class="q20">
         <form>
+            Question 20 of 24
             <span class="question">
                 Do you experience symptoms that indicate problem with your nervous system (e.g. numbness, tingling of hands and feet, and weakness)?
             </span>
@@ -281,6 +301,7 @@
     </div>
     <div class="q21">
         <form>
+            Question 21 of 24
             <span class="question">
                 Do you experience anchy joints and muscles (and that was not because of arthritis or any orthopedic disease)?
             </span>
@@ -292,6 +313,7 @@
     </div>
     <div class="q22">
         <form>
+            Question 22 of 24
             <span class="question">
                 Did you have an Abdominal pain, nausea, vomiting, and diarrhea within a year or half that went unexplained?
             </span>
@@ -303,6 +325,7 @@
     </div>
     <div class="q23">
         <form>
+            Question 23 of 24
             <span class="question">
                 How often do you experience fatigue considering that the ammount of physical exercise and current meal size largely remained constant?
             </span>
@@ -314,6 +337,7 @@
     </div>
     <div class="q24">
         <form>
+            Question 24 of 24
             <span class="question">
                 Are you able to see objects almost clearly or is your vision fairly blurred, considering that your power of eyes sparsely changed?
             </span>
@@ -328,6 +352,17 @@
             Computing Results. Please Wait!
         </span>
     </div>
+    <div class="others">
+        <span class="question">
+            <h4>Other causes include:</h4>
+            <p>
+                <u>a drug that is toxic to the kidneys,rare genetic conditions, such as Alport syndrome, renal artery stenosis,
+                Henoch-Schönlein purpura, hemolytic uremic syndrome in children, Lupus nephritis is the medical name for kidney disease caused by lupus,
+                disorders in which the body’s immune system attacks its own cells and organs, such as Goodpasture syndrome, IgA glomerulonephritis, Diabetes (Type I & II), High Blood Pressure, Genetics, Heavy metal poisoning <br/></u>
+                might also be possible.
+            </p>
+        </span>
+    </div>
     <button class="recomendlink btn">Get a personal recommendation to follow.</button>
 </div>
 
@@ -336,7 +371,7 @@
 <div class="row">
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Know About the Creator</h2>
-<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
+<p class="lead">Ahh! I'm sorry if I forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
 </div>
 </div>
 </div>
