--- a/classify.html
+++ b/classify.html
@@ -64,7 +64,7 @@
         <h4>Specific Gravity:</h4>
         <p>You need to get a medical test for this or you can skip it. It is <i>numeric</i></p>
         <input type="number" placeholder="" id="sgt"/><br/><br/>
-        <input type="submit" class="btn btn-primary next" value="next">
+        <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
             <a href="javascript:void(0)" class="show-details">What is Specific Gravity?</a>
             <p class="information">Specific Gravty refers to the ratio of the density of a substance to the density of a standard, usually water for a liquid or solid, and air for a gas. It is also measured for Human Body.</p>
@@ -171,7 +171,8 @@
     </div>
     <div class="result">Loading your Results...<br/> Please Wait.
     </div>
-    <button class="causelink btn btn-info">Let's find what caused it!</button>
+    <button class="causelink btn btn-danger">FIND OUT THE CAUSE</button>
+    <a href="contact" class="report" style="display:nones">Report inappropriate classification?</a>
 
 </div>
 </div>
