Updated with step #3

--- a/cause.html
+++ b/cause.html
@@ -343,8 +343,8 @@
             </span>
             <input type="radio" name="q24" value="0.142857142857143">Yes
             <input type="radio" name="q24" value="-0.0714285714285714">No
-            <input type="radio" name="q24" value="0">I fear my power has considerably changed
-            <input type="submit" value="Finish" class="finish">
+            <input type="radio" name="q24" value="0">I fear my power has considerably changed<br/>
+            <input type="submit" value="Finish" class="btn btn-primary finish">
         </form>
     </div>
     <div class="result">
@@ -354,6 +354,7 @@
     </div>
     <div class="others">
         <span class="question">
+            <span class="back">< Back </span><br/>
             <h4>Other causes include:</h4>
             <p>
                 <u>a drug that is toxic to the kidneys,rare genetic conditions, such as Alport syndrome, renal artery stenosis,
@@ -363,7 +364,7 @@
             </p>
         </span>
     </div>
-    <button class="recomendlink btn">Get a personal recommendation to follow.</button>
+    
 </div>
 
 <section class="probootstrap-section probootstrap-section-dark">
