--- a/laststeps.html
+++ b/laststeps.html
@@ -57,17 +57,69 @@
 </section>
 
 <section class="probootstrap-section">
-    <div class="container">
+    <div class="diabetes container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
-            <h3>We're Sorry!</h3>
-            <p>
-             This project is still in Beta. The functionality will be live soon. You can get to us at <a href="contact">here</a>.
-            </p>
+            <h3>	Exercise	</h3><p>	Regular physical activity helps you feel better. It also improves your sensitivity to insulin, which means your blood sugar levels can become more stable.	</p>
+            <h3>	Eat a well-balanced diet	</h3><p>	Try to fill your plate with non-starchy food like Asparagus, Broccoli, Broccoli, Carrot, Low-fat or non-fat dairy products, Citrus fruits, etc. Plus have add some whole grains like Brown rice, Millet, Whole whear and Oats.	</p>
+            <h3>	Reduce mental stress	</h3><p>	If you're stressed, you may exercise less, drink more, and can also lead to risen blood sugar levels. If something has you bothered, try to make changes that can help you relax. Do whatever you want.	</p>
+            <h3>	Quit Smoking	</h3><p>	Kick the habit. It'll give you better control of your blood sugar levels. If you smoke, you're also more likely to have serious health problems as well as a higher chance for complications from diabetes	</p>
+            <h3>	Cut Back on Alcohol	</h3><p>	If you're on insulin or oral diabetes meds like sulfonylureas or meglitinides, drinking alcohol can drop blood sugar to dangerous levels. When you drink, your liver has to work to remove the alcohol from your blood instead of regulating your blood sugar.	</p>
+            <h3>	Drink Water and Stay Hydrated	</h3><p>	Drinking enough water may help you keep your blood sugar levels within healthy limits. In addition to preventing dehydration, it helps your kidneys flush out the excess blood sugar through urine.	</p>
+            <h3>	Get Enough Quality Sleep	</h3><p>	Getting enough sleep feels great and is necessary for good health. Poor sleeping habits and a lack of rest also affect blood sugar levels and insulin sensitivity. They can increase appetite and promote weight gain as well deteriorate your kidneys further.	</p>
+            <h3>	Experiment With Cinnamon Extract	</h3><p>	Cinnamon is known to have many health benefits. For one, it has been shown to improve insulin sensitivity by decreasing insulin resistance at the cellular level.	</p>
+            <h3>	Lose Some Extra Weight	</h3><p>	It's a no-brainer that maintaining a healthy weight will improve your health and prevent future health problems. Weight control also promotes healthy blood sugar levels and has been shown to reduce your risk of developing diabetes.	</p>
+        </div>
+    </div>
+    </div>
+    <div class="highbp container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3>	Increase activity and exercise more	</h3><p>	As you regularly increase your heart and breathing rates, over time your heart gets stronger and pumps with less effort. This puts less pressure on your arteries and lowers your blood pressure. Just do it regularly and work up to at least half an hour per day of moderate activity.	</p>
+            <h3>	Lose weight if you’re overweight	</h3><p>	If you’re overweight, losing even 5 to 10 pounds can reduce your blood pressure. Plus, you’ll lower your risk for other medical problems.	</p>
+            <h3>	Cut back on sugar and refined carbohydrates	</h3><p>	Many scientific studies show that restricting sugar and refined carbohydrates can help you lose weight and lower your blood pressure. Refined Carbphydrates include white bread, pizza dough, pasta, pastries, white flour, white rice, sweet desserts, etc.	</p>
+            <h3>	Stop smoking	</h3><p>	Stopping smoking is good for your all-around health. Smoking causes an immediate but temporary increase in your blood pressure and an increase in your heart rate	</p>
+            <h3>	Try meditation or yoga	</h3><p>	Mindfulness and meditation, including transcendental meditation, have long been used — and studied — as methods to reduce stress. Yoga, which commonly involves breathing control, posture, and meditation techniques, can also be effective in reducing stress and blood pressure.	</p>
+            <h3>	Eat some dark chocolate	</h3><p>	Yes, chocolate lovers: Dark chocolate has been shown to lower blood pressure. But the dark chocolate should be 60 to 70 percent cacao. The benefits are thought to come from the flavonoids present in chocolate with more cocoa solids. The flavonoids help dilate, or widen, your blood vessels.	</p>
+            <h3>	Make sure to get good, restful sleep	</h3><p>	Your blood pressure typically dips down when you’re sleeping. If you don’t sleep well, it can affect your blood pressure. People who experience sleep deprivation, especially those who are middle-aged, have an increased risk of high blood pressure.	</p>
+            <h3>	Eat garlic or take garlic extract supplements	</h3><p>	Fresh garlic or garlic extract are both widely used to lower blood pressure and even hypertension in some.	</p>
+        </div>
+    </div>
+    </div>
+    <div class="genetics container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3>	Since the disease is actually inherited we can't suggest you some measures to undo it. But you can always take measures to check it.	</h3><p>		</p>
+            <h3>	Manage your blood sugar	</h3><p>	Diabetes increases your risk for heart disease and kidney failure. That’s just one reason to manage your blood sugar.	</p>
+            <h3>	Manage your blood pressure 	</h3><p>	High blood pressure can increase your risk for heart disease as well as kidney failure.	</p>
+            <h3>	Maintain a healthy weight	</h3><p>	Obesity can increase your risk for conditions associated with kidney failure, such as diabetes and high blood pressure.	</p>
+            <h3>	Eat a heart-healthy diet	</h3><p>	A heart-healthy diet — one low in sugar and cholesterol and high in fiber, whole grains, and fruits and vegetables — helps prevent weight gain.	</p>
+            <h3>	Reduce salt intake 	</h3><p>	Eating too much salt is associated with high blood pressure and subsequently kidney disease.	</p>
+            <h3>	Limit alcohol and don't smoke	</h3><p>	Alcohol increases your blood pressure. The extra calories in it can make you gain weight, too. Smoking reduces blood flow to your kidneys. It damages kidney function in people with or without kidney disease.	</p>
+            <h3>	Exercise regularly	</h3><p>	Exercise, such as swimming, walking, and running, can help reduce stress, manage diabetes and high blood pressure, and maintain a healthy weight.	</p>
+        </div>
+    </div>
+    </div>
+    <div class="metal container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3>	For mild cases	</h3><p>	Just eliminating your exposure to heavy metals can be enough to treat the condition. Depending on the underlying cause, this might mean taking some time away from work or changing your diet.  You can limit your consumption of fish known to contain higher levels of mercury. And make sure to only purchase supplements and spices from trusted, high-quality sources.	</p>
+            <h3>	For severe cases	</h3><p>	For more severe cases, the standard treatment is chelation therapy. This involves giving medication, either through a pill or injection, that binds to the heavy metals in your body. As they bind to the metals, chelators help to usher them out of your body as waste.	</p>
+            <h3>	Please see a doctor immediately. Your doctor can give you more specific recommendations on how to reduce your exposure.	</h3><p>		</p>
+            <h3>	Also, watch-out for 'detox' techniques on the internet. While these might seem like a safer, less expensive alternative to seeing a doctor, they aren’t approved by the U.S. Food and Drug Administration. And most of them haven’t been evaluated for safety or effectiveness.	</h3><p>		</p>
+        </div>
+    </div>
+    </div>
+    <div class="metal container">
+    <div class="row">
+        <div class="others col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+            <h3>	Oops!	</h3><p>	There seems an error. Were you navigated to this page after you underwent a survey from Step #2 of our service. If not then take it at <a href="cause"> here</a>. You'll be automatically navigated</p>
         </div>
     </div>
     </div>
 </section>
+
+
 <section class="probootstrap-section probootstrap-section-dark">
 <div class="container">
 <div class="row">
@@ -131,31 +183,8 @@
 <script src="js/custom.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ef720126cb2c08d7b1817c75-|49" defer=""></script></body>
 <script src="js/jquery.min.js" ></script>
-<!--Loading Firebase and its binaries-->
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyBatfxmiZStN0MSyIvBlqaGj8ixAtXSkfc",
-    authDomain: "nephron-ai.firebaseapp.com",
-    databaseURL: "https://nephron-ai.firebaseio.com",
-    projectId: "nephron-ai",
-    storageBucket: "nephron-ai.appspot.com",
-    messagingSenderId: "53854256710",
-    appId: "1:53854256710:web:2dba01c916cfb536711447",
-    measurementId: "G-S3ZE21NK3G"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-  var db = firebase.firestore();
-</script>
-<!-- Load Script for Disease Prediction Function -->
 
-<script src="js/predict.min.js"></script>
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
 <script defer>
   window.dataLayer = window.dataLayer || [];
@@ -164,6 +193,35 @@
 
   gtag('config', 'UA-129803213-2');
 </script>
-<div class="pseudo-div"></div>
+<script>
+    $(".diabetes").hide();
+    $(".highbp").hide();
+    $(".genetics").hide();
+    $(".metal").hide();
+    $(".others").hide();
+    
+    var url=window.location.href;
+    var u=url.split("=");
+    var y=u[1].split("%20");
+    var cause = y.toString();
+    cause = cause.replace(/,/g,' ');
+    $(".cause").text(cause);
+    
+    if (cause=="Diabetes"){
+        $(".diabetes").show();
+    }
+    else if (cause=="high blood pressure"){
+        $(".highbp").show();
+    }
+    else if( cause=="Genetics"){
+        $(".genetics").show();
+    }
+    else if(cause=="Heavy Metal Poisoning"){
+        $(".metal").show();
+    }
+    else{
+        $(".others").show();
+    }
+</script>
 </body>
 </html>
