--- a/laststeps.html
+++ b/laststeps.html
@@ -126,7 +126,8 @@
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Share your words</h2>
 <p class="lead">If you'd like our services why not spread the word.<br/>
-<button class="twitter btn btn-warning"><a class="icon-twitter"></a></button>
+<a href="https://twitter.com/theayushanand?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow me</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/intent/tweet?text=Hi,%20I%20just%20used%20NephronAI%20an%20AI%20powered%20tool%20by%20@theayushanand%20to%20fight%20chronic%20kidney%20disease%20using%20deep%20learning.%20Use%20it%20at%20https://ayushanand18.github.io/nephron-ai/" class="https://twclass="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Tweet this</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </p>
 </div>
 </div>
