Finalizing product and fixing final bugs

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 </div>
 <div class="row mb50">
 <div class="col-md-12">
-<p>Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnos the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
+<p>Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnose the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
 </div>
 </div>
 
@@ -128,7 +128,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -170,5 +170,13 @@ But if chronic kidney disease is detected early then we can easily save thousand
 <script src="js/scripts.min.js" type="9997faaac0da04d3925a5283-text/javascript"></script>
 <script src="js/main.min.js" type="9997faaac0da04d3925a5283-text/javascript"></script>
 <script src="js/custom.js" type="9997faaac0da04d3925a5283-text/javascript"></script>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="9997faaac0da04d3925a5283-|49" defer=""></script></body>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="9997faaac0da04d3925a5283-|49" defer=""></script><
+<script>
+    var watchintro=document.querySelector(".watch-intro");
+    watchintro.addEventListener('click',function(e){
+        e.preventDefault();
+        window.location.href='classify'
+    });
+</script>
+</body>
 </html>
