--- a/classify.html
+++ b/classify.html
@@ -12,6 +12,10 @@
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="stylesheet" href="css/classify.min.css">
+<noscript>
+    Kindly enable JavaScript in your web browser. to utilize our services to their full potential it is recommended to have JavaScript enabled.
+</noscript>
+
 </head>
 <body>
 
@@ -171,8 +175,7 @@
     </div>
     <div class="result">Loading your Results...<br/> Please Wait.
     </div>
-    <button class="causelink btn btn-danger">FIND OUT THE CAUSE</button>
-    <a href="contact" class="report" style="display:nones">Report inappropriate classification?</a>
+    <a href="contribute" class="report" style="display:nones">Report inappropriate classification?</a>
 
 </div>
 </div>
@@ -182,7 +185,7 @@
 <div class="row">
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Know About the Creator</h2>
-<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
+<p class="lead">Ahh! I'm sorry if I forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
 </div>
 </div>
 </div>
@@ -196,7 +199,7 @@
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
