--- a/contribute.html
+++ b/contribute.html
@@ -106,13 +106,13 @@
 <div class="row text-center">
 <div class="col-lg-8 col-md-offset-2 mb30 section-heading probootstrap-animate">
 <h2>We're Public</h2>
-<p class="lead"><b>Our algorithms and data are transparent and we strongly care for privacy too. Visit our GitHub repository for the code behind the project. Links to our privacy policy and terms of service are attached in the footer.</b></p>
+<p class="lead" style='color:white !important;'>Our algorithms and data are transparent and we strongly care for privacy too. Visit our GitHub repository for the code behind the project. Links to our <a href='/privacy'>Privacy Policy</a> and <a href="terms">terms of service</a> are attached in the footer.</p>
 </div>
 </div>
 <div class="row">
 <div class="col-md-4 col-md-offset-4 probootstrap-animate">
 <p class="text-center">
-<a href="https://github.com/ayushanand18" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">GitHub Repository</a>
+<a href="https://github.com/ayushanand18/nephron-ai" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">GitHub Repository</a>
 </p>
 </div>
 </div>
@@ -127,7 +127,7 @@
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
