--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>A dream project...</h2>
-<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnos Chronic Kidney Disease. </p>
+<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnose Chronic Kidney Disease. </p>
 </div>
 </div>
 <div class="row mb70">
@@ -93,11 +93,11 @@
 <div class="probootstrap-box">
 <div class="icon text-center"><i class="icon-desktop"></i></div>
 <h3>Predict the Cause</h3>
-<p>If our AI Algorithm figure out that you are vulnerable, and have have been affected by Chronic Kidney Disease then we shall investigate the cause as well.</p>
+<p>If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
-<li><i class="icon-radio-checked"></i> <span>Plus Past disease history </span></li>
-<li><i class="icon-radio-checked"></i> <span>Another AI layer will predict the cause</span></li><br/>
+<li><i class="icon-radio-checked"></i> <span>Provide your disease your history </span></li>
+<li><i class="icon-radio-checked"></i> <span>Another layer of AI will predict the cause</span></li><br/>
 </ul>
 </div>
 </div>
@@ -105,7 +105,7 @@
 <div class="probootstrap-box">
 <div class="icon text-center"><i class="icon-lightbulb"></i></div>
 <h3>Recovery Strategy</h3>
-<p>Now, that we have told you about your diagnosis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
+<p>Now, that we have told you about your diagnoseis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
 <li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
@@ -130,7 +130,7 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>But wait...</h2>
-<p class="lead">Here's some additional information for you. We aren't a big team yet, it's just one contributor here - a 15 year old student who wishes to aim good for mankind - Ayush Anand. Why not <a href="contribute">Contribute</a> to us. We'll be more than glad.</p>
+<p class="lead"><font style="background-color:black;" color='white'>Here's some additional information for you. We aren't a big team yet, it's just one contributor here- a 15 year old student who aims for the good of mankind - Ayush Anand. Why not <a href="contribute">Contribute or share your feedback</a> with us. We'll be more than glad.</font></p>
 </div>
 </div>
 </div>
@@ -142,7 +142,7 @@
 <div class="row">
 <div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
 <h2>Know About the Creator</h2>
-<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
+<p class="lead">Ahh! I'm sorry if I forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me">Know more about him</a></p>
 </div>
 </div>
 </div>
@@ -156,7 +156,7 @@
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
